--- a/style.css
+++ b/style.css
@@ -4,34 +4,34 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.todo-app__matrix-img {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.todo-app__matrix-img img {
   width: 100%;
 }
-.aaa .more_inf {
+.todo-app__matrix-img .todo-app__more-info-link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.todo-app__matrix-img { text-align: center;
 }
 }
-.centered-main-page-element {
+.todo-app__centered-main-page-element {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.todo-app__task {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
-.task-row-wrapper {
+.todo-app__task-row-wrapper {
   display: flex;
 }
 ul {
@@ -58,7 +58,7 @@ button:hover {
 }
 /* Heading */
 h3,
-label[for="{new-task"] {
+label[for="todo-app__new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -84,11 +84,11 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+label[for="todo-app__new-task"] {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+input#todo-app__new-task {
   width: 318px;
 }
 
@@ -118,17 +118,17 @@ li > label {
 li >    input[type="text"] {
   width: 226px
 }
-button.delete img {
+button.todo-app__delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.todo-app__delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul#todo-app__completed-tasks label {
   text-decoration: line-through
   color: #888;
 }
@@ -138,11 +138,11 @@ ul li input[type=text] {
   display:none
 }
 
-ul li.editMode input[type=text] {
+ul li.todo-app__edit-mode input[type=text] {
   display:inline-block;
   width:224px
 }
 
-ul li.editMode label {
+ul li.todo-app__edit-mode label {
   display:none;
 }
