--- a/style.css
+++ b/style.css
@@ -4,33 +4,45 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .todo-app__matrix-img {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .todo-app__matrix-img img {
   width: 100%;
 }
-.todo-app__matrix-img .todo-app__more-info-link {
+
+.todo-app__matrix-img  {
+  font-family: fantasy, cursive;
+}
+
+.todo-app__more-info-link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.todo-app__matrix-img { text-align: center;
+
+.todo-app__matrix-img { 
+  text-align: center;
 }
+
 }
 .todo-app__centered-main-page-element {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .todo-app__task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
+
 .todo-app__task-row-wrapper {
   display: flex;
 }
@@ -38,12 +50,17 @@ ul {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+
+li,
+h3 {  
   list-style:none;
 }
-input,button{
+
+input,
+button {
   outline:none;
 }
+
 button {
   background: none;
   border: 0px;
@@ -56,7 +73,9 @@ button {
 button:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
+
 h3,
 label[for="todo-app__new-task"] {
   color: #333;
@@ -67,6 +86,7 @@ label[for="todo-app__new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
+
 input[type="text"] {
   margin: 0;
   font-size: 18px;
@@ -79,29 +99,33 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 input[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
+
 label[for="todo-app__new-task"] {
   display: block;
   margin: 0 0 20px;
 }
+
 input#todo-app__new-task {
   width: 318px;
 }
 
 /* Task list */
+
 li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 li > * {
   vertical-align: middle;
 }
@@ -109,40 +133,46 @@ li > * {
 li > input[type="checkbox"] {
   margin: 0 10px;
 }
+
 li > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
-  width: 226px
+
+li > input[type="text"] {
+  width: 226px;
 }
-button.todo-app__delete img {
+
+button .todo-app__delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.todo-app__delete img:hover {
+
+button .todo-app__delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
+
 ul#todo-app__completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
-  display:none
+
+ul li input[type="text"] {
+  display:none;
 }
 
-ul li.todo-app__edit-mode input[type=text] {
+ul li .todo-app__edit-mode input[type="text"] {
   display:inline-block;
-  width:224px
+  width:224px;
 }
 
-ul li.todo-app__edit-mode label {
+ul li .todo-app__edit-mode label {
   display:none;
 }
